# home-server-project

./: .env.example  .gitignore  Dockerfile.celery  README.md  celerybeat-schedule  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml  test_api_keys.py  test_api_transfer.sh  test_wallet_transfer.py
api/core/: __init__.py  config.py  database.py  redis_client.py  security.py
api/models/: __init__.py  ai_decision.py  market_data.py  user.py
api/routers/: __init__.py  ai_decisions.py  auth.py  market_data.py  news.py  trading.py  users.py
api/schemas/: __init__.py  ai_decision.py  auth.py  market_data.py  user.py
api/services/: __init__.py  binance_service.py  user_service.py
celery/: test_celery.py
database/migrations/: 001_create_core_tables.sql  002_create_ai_tables.sql  003_create_timescaledb_tables.sql
docs/: API-KEY-MANAGEMENT.md  CHECKLIST-Implementation.md  PRD-AXIS-Capital.md  TRD-AXIS-Capital.md
streamlit_app/: Dockerfile  Home.py  main.py  pyproject.toml
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: 1_회원가입.py  2_로그인.py  3_대시보드.py  4_API키관리.py  5_AI의사결정.py  6_자금관리.py  7_뉴스.py
streamlit_app/utils/: __init__.py  api_client.py
workers/: celery_app.py  config.py  test_celery.py
workers/tasks/: __init__.py  market_data.py  news.py
